Update CPU Bench Mark Tests.ipynb

--- a/CPU Bench Mark Tests.ipynb
+++ b/CPU Bench Mark Tests.ipynb
@@ -21,6 +21,25 @@
     "2004.3259680271149 seconds\n",
     "Max Frequency: 2208.00Mhz\n",
     "Min Frequency: 0.00Mhz\n"
+    "\n",
+    "### Work Laptop - Windows\n",
+    "\n",
+    "i7-8665U\n",
+    "\n",
+        "Multicore: \n",
+    "\n",
+    "37.50767493247986 seconds\n",
+    "Physical cores: 4\n",
+    "Total cores: 8\n",
+    "Max Frequency: 2112.00Mhz\n",
+    "Min Frequency: 0.00Mhz\n",
+    "\n",
+    "Single Core:\n",
+    "\n",
+    "2000.4774777889252 seconds\n",
+    "Max Frequency: 2112.00Mhz\n",
+    "Min Frequency: 0.00Mhz\n"
+    "\n",
    ]
   },
   {
