--- a/CPU Bench Mark Tests.ipynb
+++ b/CPU Bench Mark Tests.ipynb
@@ -20,13 +20,34 @@
     "\n",
     "2004.3259680271149 seconds\n",
     "Max Frequency: 2208.00Mhz\n",
-    "Min Frequency: 0.00Mhz\n"
+    "Min Frequency: 0.00Mhz\n",
+    "\n",
+    "### New Home Laptop - Windows\n",
+    "\n",
+    "i9-10900k\n",
+    "\n",
+    "Multicore:\n",
+    "\n",
+    "5.516829013824463 seconds\n",
+    "Physical cores: 10\n",
+    "Total cores: 20\n",
+    "Max Frequency: 3696.00Mhz\n",
+    "Min Frequency: 0.00Mhz\n",
+    "\n",
+    "Single Core:\n",
+    "\n",
+    "2007.589105129242 seconds\n",
+    "Physical cores: 10\n",
+    "Total cores: 20\n",
+    "Max Frequency: 3696.00Mhz\n",
+    "Min Frequency: 0.00Mhz\n",
+    "\n",
     "\n",
     "### Work Laptop - Windows\n",
     "\n",
     "i7-8665U\n",
     "\n",
-        "Multicore: \n",
+    "Multicore:\n",
     "\n",
     "37.50767493247986 seconds\n",
     "Physical cores: 4\n",
@@ -39,7 +60,6 @@
     "2000.4774777889252 seconds\n",
     "Max Frequency: 2112.00Mhz\n",
     "Min Frequency: 0.00Mhz\n"
-    "\n",
    ]
   },
   {
@@ -52,25 +72,33 @@
      "output_type": "stream",
      "text": [
       "======================================== CPU Info ========================================\n",
-      "That took 18.618483066558838 seconds\n",
-      "Physical cores: 6\n",
-      "Total cores: 12\n",
-      "Max Frequenct: 2208.00Mhz\n",
+      "That took 5.516829013824463 seconds\n",
+      "Physical cores: 10\n",
+      "Total cores: 20\n",
+      "Max Frequenct: 3696.00Mhz\n",
       "Min Frequenct: 0.00Mhz\n",
       "CPU Usage Per Core:\n",
-      "Core 0: 99.9%\n",
-      "Core 1: 99.7%\n",
-      "Core 2: 99.9%\n",
-      "Core 3: 99.7%\n",
-      "Core 4: 99.9%\n",
-      "Core 5: 99.6%\n",
-      "Core 6: 99.9%\n",
-      "Core 7: 99.7%\n",
-      "Core 8: 99.8%\n",
-      "Core 9: 99.7%\n",
-      "Core 10: 99.9%\n",
-      "Core 11: 99.7%\n",
-      "Total CPU Usage: 99.8%\n"
+      "Core 0: 98.9%\n",
+      "Core 1: 99.2%\n",
+      "Core 2: 99.4%\n",
+      "Core 3: 98.9%\n",
+      "Core 4: 99.7%\n",
+      "Core 5: 99.2%\n",
+      "Core 6: 99.4%\n",
+      "Core 7: 99.4%\n",
+      "Core 8: 99.7%\n",
+      "Core 9: 98.9%\n",
+      "Core 10: 99.2%\n",
+      "Core 11: 99.2%\n",
+      "Core 12: 99.4%\n",
+      "Core 13: 98.9%\n",
+      "Core 14: 98.9%\n",
+      "Core 15: 99.2%\n",
+      "Core 16: 99.5%\n",
+      "Core 17: 99.2%\n",
+      "Core 18: 99.7%\n",
+      "Core 19: 99.4%\n",
+      "Total CPU Usage: 99.3%\n"
      ]
     }
    ],
@@ -140,25 +168,33 @@
      "output_type": "stream",
      "text": [
       "======================================== CPU Info ========================================\n",
-      "That took 2004.3259680271149 seconds\n",
-      "Physical cores: 6\n",
-      "Total cores: 12\n",
-      "Max Frequenct: 2208.00Mhz\n",
+      "That took 2007.589105129242 seconds\n",
+      "Physical cores: 10\n",
+      "Total cores: 20\n",
+      "Max Frequenct: 3696.00Mhz\n",
       "Min Frequenct: 0.00Mhz\n",
       "CPU Usage Per Core:\n",
-      "Core 0: 1.0%\n",
-      "Core 1: 0.3%\n",
-      "Core 2: 0.8%\n",
-      "Core 3: 0.4%\n",
+      "Core 0: 0.8%\n",
+      "Core 1: 0.4%\n",
+      "Core 2: 1.2%\n",
+      "Core 3: 0.1%\n",
       "Core 4: 0.6%\n",
-      "Core 5: 0.5%\n",
-      "Core 6: 1.9%\n",
-      "Core 7: 0.4%\n",
-      "Core 8: 1.8%\n",
-      "Core 9: 0.5%\n",
-      "Core 10: 0.5%\n",
-      "Core 11: 0.4%\n",
-      "Total CPU Usage: 0.7%\n"
+      "Core 5: 0.2%\n",
+      "Core 6: 0.6%\n",
+      "Core 7: 0.2%\n",
+      "Core 8: 0.3%\n",
+      "Core 9: 0.2%\n",
+      "Core 10: 0.9%\n",
+      "Core 11: 1.3%\n",
+      "Core 12: 4.6%\n",
+      "Core 13: 1.1%\n",
+      "Core 14: 1.6%\n",
+      "Core 15: 0.1%\n",
+      "Core 16: 1.0%\n",
+      "Core 17: 5.7%\n",
+      "Core 18: 0.7%\n",
+      "Core 19: 0.3%\n",
+      "Total CPU Usage: 1.1%\n"
      ]
     }
    ],
@@ -205,6 +241,13 @@
     "    print(f\"Core {i}: {percentage}%\")\n",
     "print(f\"Total CPU Usage: {psutil.cpu_percent()}%\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -223,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
